# NaiveBayesWorkshop

./: CMakeLists.txt  README.md  compile.sh
Code/: CMakeLists.txt  Makefile  main.cpp
Code/apps/: CMakeLists.txt
Code/interface/: CachedCalculator.h  Calculator.h  Expression.h
Code/src/: CMakeLists.txt  Calculator.cpp  Expression.cpp  Operation.cpp  equation.cpp  equation.h  main.cc
Code/tests/: CMakeLists.txt  test-calculator.cpp
apps/: CMakeLists.txt  main.cc  main.cpp
interface/: CachedCalculator.h  Expression.h  Operation.h  cached_calculator.h  expression.h
src/: CMakeLists.txt  CachedCalculator.cpp  Expression.cpp  Operation.cpp  cached_calculator.cc  expression.cc  operation.cc
tests/: CMakeLists.txt  cached-calculator-tests.cc  cached-calculator-tests.cpp  test-calculator.cpp  test-expression.cc  test-expression.cpp
